hphp/hack/test/typecheck/expression_trees/nested_expression_tree_lambda.php.exp
File "nested_expression_tree_lambda.php", line 6, characters 22-28:
Expression trees may not be nested (Parsing[1002])
