hphp/hack/test/typecheck/expression_trees/nested_expression_tree_lambda.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`() ==> { $x = Code`1`; }`;
}
